Refresh zoom bubble if visible following whitelisted extension zoom.

Extensions may be whitelisted to suppress the zoom bubble when
performing an extension initiated zoom (e.g. the PDF viewer). However,
this also suppressed updates to the zoom bubble if it was already
being shown.

We now update the zoom bubble (if it exists) in this case.

Bug: 817278
Change-Id: Ia746f25de2760e8349a1ec3d3f4c899392d0fc81
Reviewed-on: https://chromium-review.googlesource.com/1086153
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Reviewed-by: James MacLean <wjmaclean@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Kevin McNee <mcnee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571124}
Former-commit-id: 741158fe9991a5af722f4ee7d7f20a1899ae2e71