chrome/browser/ui/views/location_bar/zoom_bubble_view.cc
@@ -114,6 +114,12 @@ class ZoomValue : public views::Label {
   DISALLOW_COPY_AND_ASSIGN(ZoomValue);
 };
 
+bool IsBrowserFullscreen(Browser* browser) {
+  DCHECK(browser->window() &&
+         browser->exclusive_access_manager()->fullscreen_controller());
+  return browser->window()->IsFullscreen();
+}
+
 views::View* GetAnchorViewForBrowser(Browser* browser, bool is_fullscreen) {
 #if !defined(OS_MACOSX) || BUILDFLAG(MAC_VIEWS_BROWSER)
 #if BUILDFLAG(MAC_VIEWS_BROWSER)
@@ -132,6 +138,11 @@ views::View* GetAnchorViewForBrowser(Browser* browser, bool is_fullscreen) {
 #else  // OS_MACOSX && !MAC_VIEWS_BROWSER
   return nullptr;
 #endif
+}
+
+views::View* GetAnchorViewForBrowser(Browser* browser) {
+  const bool is_fullscreen = IsBrowserFullscreen(browser);
+  return GetAnchorViewForBrowser(browser, is_fullscreen);
 }
 
 ImmersiveModeController* GetImmersiveModeControllerForBrowser(
@@ -194,6 +205,15 @@ void ParentToBrowser(Browser* browser,
 #endif
 }
 
+// Find the extension that initiated the zoom change, if any.
+const extensions::ExtensionZoomRequestClient* GetExtensionZoomRequestClient(
+    const content::WebContents* web_contents) {
+  const zoom::ZoomController* zoom_controller =
+      zoom::ZoomController::FromWebContents(web_contents);
+  const zoom::ZoomRequestClient* client = zoom_controller->last_client();
+  return static_cast<const extensions::ExtensionZoomRequestClient*>(client);
+}
+
 }  // namespace
 
 // static
@@ -208,42 +228,29 @@ void ZoomBubbleView::ShowBubble(content::WebContents* web_contents,
   // event arrives before the zoom icon gets hidden.
   if (!browser)
     return;
-  DCHECK(browser->window() &&
-         browser->exclusive_access_manager()->fullscreen_controller());
 
-  bool is_fullscreen = browser->window()->IsFullscreen();
-  views::View* anchor_view = GetAnchorViewForBrowser(browser, is_fullscreen);
-  ImmersiveModeController* immersive_mode_controller =
-      GetImmersiveModeControllerForBrowser(browser);
-
-  // Find the extension that initiated the zoom change, if any.
-  zoom::ZoomController* zoom_controller =
-      zoom::ZoomController::FromWebContents(web_contents);
-  const zoom::ZoomRequestClient* client = zoom_controller->last_client();
-
-  // If the bubble is already showing in this window and the zoom change was not
-  // initiated by an extension, then the bubble can be reused and only the label
-  // text needs to be updated.
-  if (zoom_bubble_ && zoom_bubble_->GetAnchorView() == anchor_view && !client) {
-    DCHECK_EQ(web_contents, zoom_bubble_->web_contents());
-    zoom_bubble_->Refresh();
+  if (RefreshBubbleIfShowing(web_contents))
     return;
-  }
 
   // If the bubble is already showing but in a different tab, the current
   // bubble must be closed and a new one created.
   CloseCurrentBubble();
 
+  const bool is_fullscreen = IsBrowserFullscreen(browser);
+  views::View* anchor_view = GetAnchorViewForBrowser(browser, is_fullscreen);
+  ImmersiveModeController* immersive_mode_controller =
+      GetImmersiveModeControllerForBrowser(browser);
+
   zoom_bubble_ = new ZoomBubbleView(anchor_view, anchor_point, web_contents,
                                     reason, immersive_mode_controller);
 
+  const extensions::ExtensionZoomRequestClient* client =
+      GetExtensionZoomRequestClient(web_contents);
+
   // If the zoom change was initiated by an extension, capture the relevent
   // information from it.
-  if (client) {
-    zoom_bubble_->SetExtensionInfo(
-        static_cast<const extensions::ExtensionZoomRequestClient*>(client)
-            ->extension());
-  }
+  if (client)
+    zoom_bubble_->SetExtensionInfo(client->extension());
 
   ParentToBrowser(browser, zoom_bubble_, anchor_view, web_contents);
 
@@ -253,6 +260,36 @@ void ZoomBubbleView::ShowBubble(content::WebContents* web_contents,
 
   zoom_bubble_->ShowForReason(reason);
   zoom_bubble_->UpdateZoomIconVisibility();
+}
+
+// static
+bool ZoomBubbleView::RefreshBubbleIfShowing(
+    const content::WebContents* web_contents) {
+  if (!CanRefresh(web_contents))
+    return false;
+
+  DCHECK_EQ(web_contents, zoom_bubble_->web_contents());
+  zoom_bubble_->Refresh();
+
+  return true;
+}
+
+// static
+bool ZoomBubbleView::CanRefresh(const content::WebContents* web_contents) {
+  Browser* browser = chrome::FindBrowserWithWebContents(web_contents);
+  if (!browser)
+    return false;
+
+  const views::View* anchor_view = GetAnchorViewForBrowser(browser);
+  const extensions::ExtensionZoomRequestClient* client =
+      GetExtensionZoomRequestClient(web_contents);
+
+  // If the bubble is already showing in this window and the zoom change was not
+  // initiated by an extension that needs attribution in the zoom bubble, then
+  // the bubble can be reused and only the label text needs to be updated.
+  return zoom_bubble_ && zoom_bubble_->web_contents() == web_contents &&
+         zoom_bubble_->GetAnchorView() == anchor_view &&
+         (!client || client->ShouldSuppressBubble());
 }
 
 // static
