chrome/browser/ui/views/location_bar/zoom_bubble_view.h
@@ -38,6 +38,9 @@ class ZoomBubbleView : public LocationBarBubbleDelegateView,
                          const gfx::Point& anchor_point,
                          DisplayReason reason);
 
+  // If the bubble is being shown for the given |web_contents|, refreshes it.
+  static bool RefreshBubbleIfShowing(const content::WebContents* web_contents);
+
   // Closes the showing bubble (if one exists).
   static void CloseCurrentBubble();
 
@@ -51,6 +54,12 @@ class ZoomBubbleView : public LocationBarBubbleDelegateView,
 
  private:
   FRIEND_TEST_ALL_PREFIXES(ZoomBubbleBrowserTest, ImmersiveFullscreen);
+  FRIEND_TEST_ALL_PREFIXES(ZoomBubbleBrowserTest,
+                           BubbleSuppressingExtensionRefreshesExistingBubble);
+
+  // Returns true if we can reuse the existing bubble for the given
+  // |web_contents|.
+  static bool CanRefresh(const content::WebContents* web_contents);
 
   // Stores information about the extension that initiated the zoom change, if
   // any.
